--- a/selectamp-backend/selectamp-api-web/.gitignore
+++ b/selectamp-backend/selectamp-api-web/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+.mvn/
+mvnw
+mvnw.cmd
 
 ### STS ###
 .apt_generated
@@ -31,3 +34,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Config ###
+!**/src/main/resources/application.properties
+
