--- a/selectamp-frontend/package.json
+++ b/selectamp-frontend/package.json
@@ -8,6 +8,7 @@
     "@emotion/babel-preset-css-prop": "^11.2.0",
     "@emotion/react": "^11.1.5",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@reduxjs/toolkit": "^1.5.1",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -50,6 +51,7 @@
     "fs-extra": "^9.0.1",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
+    "immer": "^9.0.1",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
@@ -69,11 +71,11 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.2",
     "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.1.0-rc.1",
     "react-refresh": "^0.8.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
+    "redux": "^4.1.0-alpha.0",
     "redux-actions": "^2.6.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
@@ -82,6 +84,7 @@
     "style-loader": "1.3.0",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.5",
     "url-loader": "4.1.1",
     "web-vitals": "^1.1.0",
