--- a/selectamp-frontend/package.json
+++ b/selectamp-frontend/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.12.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
@@ -71,6 +72,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.2",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.13.1",
     "react-redux": "^7.1.0-rc.1",
     "react-refresh": "^0.8.3",
     "react-router": "^5.2.0",
@@ -82,6 +84,7 @@
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
+    "suneditor-react": "^2.16.5",
     "terser-webpack-plugin": "4.2.3",
     "ts-pnp": "1.2.0",
     "typesafe-actions": "^5.1.0",
